# Oryxis

./: .gitignore  AGENTS.md  LICENSE  README.md  build_skills.py
ORYXIS/: Cargo.toml  main.py  prompt.md  prompt.txt
ORYXIS/memory/: skills_index.json
ORYXIS/skills/: cmd_lib.yaml  file_lib.yaml  memorylib.yaml  weblib.yaml
ORYXIS/skills/lib/: cmdlib.py  file_lib.py  skill_lib.py
ORYXIS/src/: action_executor.rs  errors.rs  executer.rs  gemini_api.rs  groq_api.rs  llmapi.rs  main.rs  script.rs  tts.rs
libraries_opensource/cmdlib/: Cargo.toml  pyproject.toml
libraries_opensource/cmdlib/src/: lib.rs
libraries_opensource/file_lib/: Cargo.toml
libraries_opensource/file_lib/src/: lib.rs
libraries_opensource/skill_lib/: Cargo.toml  main.py  pyproject.toml
libraries_opensource/skill_lib/memory/: skills_index.json
libraries_opensource/skill_lib/skills/: cmdlib.yaml
libraries_opensource/skill_lib/src/: lib.rs
memory/: Cargo.toml  pyproject.toml  test.py
memory/mydb/: 000117.sst  IDENTITY  MANIFEST-000121
memory/src/: lib.rs
rust_tests/: Cargo.toml  build_log.txt  test.py
rust_tests/mydb/: 000216.sst  000224.sst  IDENTITY  LOG.old.1771525641001994  LOG.old.1771527737026235  MANIFEST-000213  MANIFEST-000221
rust_tests/src/: debuginfo.rs  executer.rs  main.rs  test.py
rust_tests_api/: Cargo.toml  prompt.txt
rust_tests_api/src/: main.rs
