[package]
name = "memory"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "memory"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.0"
surrealdb = {version = "2.6.0", features = ["kv-rocksdb"]}
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.19"
