[package]
name = "rust_tests"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
llama-cpp-2 = {version = "0.1.132", features = ["vulkan"]}
pyo3 = { version = "0.23", features = ["auto-initialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
