[package]
name = "skill_lib"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "skill_lib"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.0"
rust-yaml = "0.0.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
